# MemoLite

./: .env.template  .gitignore  README.md  agent.py  config.py  evaluator.py  main.py  memory.py  pyproject.toml
prompts/: SYSTEM_PROPT.py
store/: kv_store.py  priority.py  vector_store.py  version.py  writer.py
